# PtexShaders

./: Build.txt  Install.txt
code/: .gitignore  CMakeLists.txt
code/3dsmax/: About.cpp  About.h  CMakeLists.txt  Debug.cpp  Debug.h  DllEntry.cpp  Modifier.cpp  Modifier.h  Ptex.def  Ptex.rc  Texture.cpp  Texture.h  resource.h
code/3dsmax/Max2010/: CMakeLists.txt
code/3dsmax/Max2011/: CMakeLists.txt
code/Maya/: AEPtexColorTemplate.mel  AEptexColorTextureTemplate.mel  AEptexTemplate.mel  CMakeLists.txt  CmpMeshModifierCmd.cpp  CmpMeshModifierCmd.h  CmpMeshModifierNode.cpp  CmpMeshModifierNode.h  PluginMain.cpp  PtexColorNode.cpp  PtexColorNode.h  PtexUVCmd.cpp  PtexUVCmd.h  PtexUVNode.cpp  PtexUVNode.h
code/Maya/Maya2010/: CMakeLists.txt
code/Maya/Maya2011/: CMakeLists.txt
code/Maya/Maya8.5/: CMakeLists.txt
code/MentalRay/: CMakeLists.txt  Ptex.mi  PtexColor.cpp  PtexColor.h
code/MentalRay/Max2010/: CMakeLists.txt
code/MentalRay/Max2011/: CMakeLists.txt
code/MentalRay/Maya2010/: CMakeLists.txt
code/MentalRay/Maya2011/: CMakeLists.txt
code/PtexLib/: CMakeLists.txt  PtexHalf.h  Ptexture.h
code/ZLib/: CMakeLists.txt
