# Top-Level CmakeLists.txt
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT( PtexShaders )

SET ( CMAKE_CONFIGURATION_TYPES Debug Release  CACHE STRING "" FORCE)

SET ( UNICODE_FLAGS -D_UNICODE )
SET ( DEPRECATION_FLAGS "_CRT_SECURE_NO_DEPRECATE,_CRT_NONSTDC_NO_DEPRECATE,_CRT_SECURE_NO_WARNINGS" )
SET ( RTTI_FLAGS /GR )

SET ( CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/Lib" )
SET ( CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/Lib" )
SET ( CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/Bin" )

#---------------------------------#
# N A M E S                       #
#---------------------------------#

SET ( ZLIB_NAME_LIB libz )
SET ( PTEX_NAME_LIB libptex )

ADD_SUBDIRECTORY( PtexLib )
ADD_SUBDIRECTORY( ZLib )
ADD_SUBDIRECTORY( 3dsmax )
ADD_SUBDIRECTORY( Maya )
ADD_SUBDIRECTORY( MentalRay )