
IF ( MSVC90 )

	#######################################################
	# P L U G I N   F O R   3 D S M A X   2 0 1 0         #
	#######################################################
	
	INCLUDE_DIRECTORIES ( ${MAXSDK_2010_HEADERS_DIR} ${PTEX_HEADERS_DIR} )
	LINK_DIRECTORIES ( ${MAXSDK_2010_LIBRARY_DIR} )
	
	ADD_LIBRARY ( ${PROJECT_NAME_MAX_2010} SHARED ${SOURCE_FILES} ${HEADER_FILES} ${RESOURCE_FILES} )
	TARGET_LINK_LIBRARIES( ${PROJECT_NAME_MAX_2010} ${MAX_LIBS} ${PTEX_LIBS} ${PTEX_NAME_LIB} ${ZLIB_NAME_LIB} )

	SET_TARGET_PROPERTIES( ${PROJECT_NAME_MAX_2010} PROPERTIES OUTPUT_NAME "Max2010/Ptex" )
	SET_TARGET_PROPERTIES( ${PROJECT_NAME_MAX_2010} PROPERTIES SUFFIX ".dlt" )
	SET_TARGET_PROPERTIES( ${PROJECT_NAME_MAX_2010} PROPERTIES CLEAN_DIRECT_OUTPUT 1 )	
	SET_TARGET_PROPERTIES( ${PROJECT_NAME_MAX_2010} PROPERTIES COMPILE_DEFINITIONS ${DEPRECATION_FLAGS} )
	
	SET ( LOCAL_WARNING_FLAGS /W3 )
	SET ( LOCAL_RTTI_FLAGS /GR )
	
	ADD_CUSTOM_COMMAND( TARGET ${PROJECT_NAME_MAX_2010} POST_BUILD COMMAND copy ..\\..\\Bin\\$(ConfigurationName)\\Max2010\\Ptex.dlt "${PROGRAM_FILES}\\Autodesk\\3ds Max 2010\\plugins" )
	
ENDIF ( MSVC90 )
