
#######################################################
# P L U G I N   F O R   M A Y A   2 0 1 0             #
#######################################################

INCLUDE_DIRECTORIES ( ${PUBLIC_INCLUDE_DIRS} ${MAYA_2010_HEADERS_DIR} ${PTEX_HEADERS_DIR} )
LINK_DIRECTORIES ( ${PUBLIC_LIBRARY_DIRS} ${MAYA_2010_LIBRARY_DIR} )

ADD_LIBRARY ( ${PROJECT_NAME_MAYA_2010} SHARED ${SOURCE_FILES} ${HEADER_FILES} )
TARGET_LINK_LIBRARIES( ${PROJECT_NAME_MAYA_2010} ${MAYA_LIBRARIES} ${PTEX_NAME_LIB} ${ZLIB_NAME_LIB} )

SET_TARGET_PROPERTIES( ${PROJECT_NAME_MAYA_2010} PROPERTIES COMPILE_DEFINITIONS ${CUSTOM_DEFINITIONS} )
SET_TARGET_PROPERTIES( ${PROJECT_NAME_MAYA_2010} PROPERTIES OUTPUT_NAME "/Maya2010/Ptex" )
SET_TARGET_PROPERTIES( ${PROJECT_NAME_MAYA_2010} PROPERTIES SUFFIX ".mll" )
SET_TARGET_PROPERTIES( ${PROJECT_NAME_MAYA_2010} PROPERTIES CLEAN_DIRECT_OUTPUT 1 )

SET_TARGET_PROPERTIES( ${PROJECT_NAME_MAYA_2010} PROPERTIES LINK_FLAGS "/export:initializePlugin /export:uninitializePlugin" )

ADD_CUSTOM_COMMAND( TARGET ${PROJECT_NAME_MAYA_2010} POST_BUILD COMMAND copy ..\\..\\Bin\\$(ConfigurationName)\\Maya2010\\Ptex.mll "${PROGRAM_FILES}\\Autodesk\\Maya2010\\bin\\plug-ins" )	
ADD_CUSTOM_COMMAND( TARGET ${PROJECT_NAME_MAYA_2010} POST_BUILD COMMAND copy ..\\..\\..\\code\\Maya\\AEptexColorTextureTemplate.mel "${PROGRAM_FILES}\\Autodesk\\Maya2010\\scripts\\AETemplates" )	

SET ( LOCAL_WARNING_FLAGS /W3 )
SET ( LOCAL_RTTI_FLAGS /GR )
