
IF ( MSVC90 )

	#############################################################################
	# M E N T A L   R A Y   S H A D E R   F O R   3 D S M A X   2 0 1 0         #
	#############################################################################
	
	INCLUDE_DIRECTORIES ( ${MENTALRAY_MAX_2010_HEADERS_DIR} ${PTEX_HEADERS_DIR} )
	LINK_DIRECTORIES ( ${MENTALRAY_MAX_2010_LIBRARY_DIR} )
	
	ADD_LIBRARY ( ${MENTAL_RAY_MAX_2010} SHARED ${SOURCE_FILES} ${HEADER_FILES} ${RESOURCE_FILES} )
	TARGET_LINK_LIBRARIES( ${MENTAL_RAY_MAX_2010} ${MENTAL_RAY_LIBS} ${PTEX_LIBS} ${PTEX_NAME_LIB} ${ZLIB_NAME_LIB} )

	SET_TARGET_PROPERTIES( ${MENTAL_RAY_MAX_2010} PROPERTIES OUTPUT_NAME "Max2010/Ptex" )
	SET_TARGET_PROPERTIES( ${MENTAL_RAY_MAX_2010} PROPERTIES SUFFIX ".dll" )
	SET_TARGET_PROPERTIES( ${MENTAL_RAY_MAX_2010} PROPERTIES CLEAN_DIRECT_OUTPUT 1 )	
	SET_TARGET_PROPERTIES( ${MENTAL_RAY_MAX_2010} PROPERTIES COMPILE_DEFINITIONS ${DEPRECATION_FLAGS} )
	
	SET ( LOCAL_WARNING_FLAGS /W3 )
	SET ( LOCAL_RTTI_FLAGS /GR )
	
	ADD_CUSTOM_COMMAND( TARGET ${MENTAL_RAY_MAX_2010} POST_BUILD COMMAND copy ..\\..\\Bin\\$(ConfigurationName)\\Max2010\\Ptex.dll "${PROGRAM_FILES}\\Autodesk\\3ds Max 2010\\mentalray\\shaders_3rdparty\\shaders" )
	
	ADD_CUSTOM_COMMAND( TARGET ${MENTAL_RAY_MAX_2010} POST_BUILD COMMAND copy ..\\..\\..\\code\\MentalRay\\Ptex.mi "${PROGRAM_FILES}\\Autodesk\\3ds Max 2010\\mentalray\\shaders_3rdparty\\include" )
		
ENDIF ( MSVC90 )
