
IF ( MSVC90 )
	
	#######################################################
	# P L U G I N   F O R   3 D S M A X   2 0 1 1         #
	#######################################################
	
	INCLUDE_DIRECTORIES ( ${MENTALRAY_MAX_2011_HEADERS_DIR} ${PTEX_HEADERS_DIR} )
	LINK_DIRECTORIES ( ${MENTALRAY_MAX_2011_LIBRARY_DIR} )
	
	ADD_LIBRARY ( ${MENTAL_RAY_MAX_2011} SHARED ${SOURCE_FILES} ${HEADER_FILES} ${RESOURCE_FILES} )
	TARGET_LINK_LIBRARIES( ${MENTAL_RAY_MAX_2011} ${MENTAL_RAY_LIBS} ${PTEX_LIBS} ${PTEX_NAME_LIB} ${ZLIB_NAME_LIB} )

	SET_TARGET_PROPERTIES( ${MENTAL_RAY_MAX_2011} PROPERTIES OUTPUT_NAME "Max2011/Ptex" )
	SET_TARGET_PROPERTIES( ${MENTAL_RAY_MAX_2011} PROPERTIES SUFFIX ".dll" )
	SET_TARGET_PROPERTIES( ${MENTAL_RAY_MAX_2011} PROPERTIES CLEAN_DIRECT_OUTPUT 1 )	
	SET_TARGET_PROPERTIES( ${MENTAL_RAY_MAX_2011} PROPERTIES COMPILE_DEFINITIONS ${DEPRECATION_FLAGS} )
	
	SET ( LOCAL_WARNING_FLAGS /W3 )
	SET ( LOCAL_RTTI_FLAGS /GR )

	ADD_CUSTOM_COMMAND( TARGET ${MENTAL_RAY_MAX_2011} POST_BUILD COMMAND copy ..\\..\\Bin\\$(ConfigurationName)\\Max2011/Ptex.dll "${PROGRAM_FILES}\\Autodesk\\3ds Max 2011\\mentalray\\shaders_3rdparty\\shaders" )
	
	ADD_CUSTOM_COMMAND( TARGET ${MENTAL_RAY_MAX_2011} POST_BUILD COMMAND copy ..\\..\\..\\code\\MentalRay\\Ptex.mi "${PROGRAM_FILES}\\Autodesk\\3ds Max 2010\\mentalray\\shaders_3rdparty\\include" )
		
ENDIF ( MSVC90 )
