
IF ( MSVC90 )

	#############################################################################
	# M E N T A L   R A Y   S H A D E R   F O R   M A Y A   2 0 1 1             #
	#############################################################################
	
	INCLUDE_DIRECTORIES ( ${MENTALRAY_MAYA_2011_HEADERS_DIR} ${PTEX_HEADERS_DIR} )
	LINK_DIRECTORIES ( ${MENTALRAY_MAYA_2011_LIBRARY_DIR} )
	
	ADD_LIBRARY ( ${MENTAL_RAY_MAYA_2011} SHARED ${SOURCE_FILES} ${HEADER_FILES} ${RESOURCE_FILES} )
	TARGET_LINK_LIBRARIES( ${MENTAL_RAY_MAYA_2011} ${MENTAL_RAY_LIBS} ${PTEX_LIBS} ${PTEX_NAME_LIB} ${ZLIB_NAME_LIB} )

	SET_TARGET_PROPERTIES( ${MENTAL_RAY_MAYA_2011} PROPERTIES OUTPUT_NAME "Maya2011/Ptex" )
	SET_TARGET_PROPERTIES( ${MENTAL_RAY_MAYA_2011} PROPERTIES SUFFIX ".dll" )
	SET_TARGET_PROPERTIES( ${MENTAL_RAY_MAYA_2011} PROPERTIES CLEAN_DIRECT_OUTPUT 1 )	
	SET_TARGET_PROPERTIES( ${MENTAL_RAY_MAYA_2011} PROPERTIES COMPILE_DEFINITIONS ${DEPRECATION_FLAGS} )
	
	SET ( LOCAL_WARNING_FLAGS /W3 )
	SET ( LOCAL_RTTI_FLAGS /GR )
	
	ADD_CUSTOM_COMMAND( TARGET ${MENTAL_RAY_MAYA_2011} POST_BUILD COMMAND copy ..\\..\\Bin\\$(ConfigurationName)\\Maya2011\\Ptex.dll "${PROGRAM_FILES}\\Autodesk\\Maya2010\\mentalray\\lib" )
	
	ADD_CUSTOM_COMMAND( TARGET ${MENTAL_RAY_MAYA_2011} POST_BUILD COMMAND copy ..\\..\\..\\code\\MentalRay\\Ptex.mi "${PROGRAM_FILES}\\Autodesk\\Maya2010\\mentalray\\include" )
		
ENDIF ( MSVC90 )
